Add xlog to debug failure on macos-aarch64